# ArchitectureAndDesignPatterns_HW7_VerticalScalingAndSynchronization

./: CMakeLists.txt
source/: VerticalScalingAndSynchronization.cpp  VerticalScalingAndSynchronization.hpp  cCommandsDeque.hpp  cException.hpp  cServerThread.cpp  cServerThread.hpp  cStopCommand.cpp  cStopCommand.hpp  iCommand.hpp
source/tests/: test_VerticalScalingAndSynchronization.cpp  test_cServerThread.cpp  test_iCommand.cpp
